# project

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  deploy.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: config.py  db.py  main.py
backend/app/auth/: dependencies.py  impersonation.py  session.py  tokens.py
backend/app/email/: sender.py
backend/app/events/: bus.py  types.py
backend/app/middleware/: readonly_impersonation.py
backend/app/models/: __init__.py  actions.py  base.py  closeout.py  enums.py  invitation.py  launch.py  messaging.py  notification.py  project.py  provider.py  respondent.py  webhooks.py
backend/app/notifications/: templates.py
backend/app/notifications/email_templates/: magic_link.html  magic_link.txt
backend/app/queries/: scope.py
backend/app/routes/: admin.py  auth.py  health.py  webhooks_inbound.py
backend/app/webhooks/: dispatcher.py  hmac_signing.py
backend/scripts/: init-test-db.sql
backend/tests/: conftest.py  test_auth_session.py  test_auth_tokens.py  test_events_bus.py  test_health.py  test_impersonation_middleware.py  test_models_metadata.py  test_provider_scoping.py  test_webhooks_hmac.py  test_webhooks_inbound.py
docs/adrs/: 0001-new-repo-vs-usercue-monorepo.md
docs/plans/: 2026-04-19-inventory-page-design.md  2026-04-19-inventory-page-plan.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  (+1 more)
(+15 files in other folders)
